--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.4.0",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
@@ -22,6 +23,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "4.4.0",
     "typescript": "4.8.4"
   }
 }
