--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adminjs/express": "^5.0.1",
+    "@adminjs/prisma": "^3.0.1",
+    "adminjs": "^6.4.1",
     "bootstrap": "^5.2.2",
+    "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
