--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@adminjs/express": "^5.0.1",
     "@adminjs/prisma": "^3.0.1",
-    "adminjs": "^6.4.1",
     "@prisma/client": "4.4.0",
+    "adminjs": "^6.4.1",
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
@@ -35,8 +35,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "^4.4.0",
     "ts-node": "^10.9.1",
-    "prisma": "4.4.0",
     "typescript": "4.8.4"
   }
 }
