--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "bootstrap": "^5.2.2",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
