--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -1,5 +1,8 @@
 {
   "name": "lo-mercat-app",
+  "engines": {
+    "yarn": "\n\nUSE NPM!\n\n"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
