--- a/lo-mercat-app/Dockerfile.adminjs
+++ b/lo-mercat-app/Dockerfile.adminjs
@@ -1,15 +1,30 @@
-FROM node:18-bullseye-slim
+# Install dependencies only when needed
+FROM node:18-alpine AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
 
-RUN mkdir /lo-mercat-app
-COPY lo-mercat-app/*.json /lo-mercat-app/
+# Install dependencies based on the preferred package manager
+COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+RUN \
+  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --frozen-lockfile; \
+  else echo "Lockfile not found." && exit 1; \
+  fi
 
-WORKDIR /lo-mercat-app
 
-RUN npm i
+FROM node:18-alpine AS runner
 
-COPY lo-mercat-app/ /lo-mercat-app/
+COPY --from=deps /app/node_modules ./node_modules
 
-WORKDIR /lo-mercat-app/adminjs
+RUN mkdir /app
+
+COPY . .
+
+RUN prisma generate
+
+WORKDIR /app/adminjs
 
 ENTRYPOINT node adminjs.js
 
