--- a/lo-mercat-app/.dockerignore
+++ b/lo-mercat-app/.dockerignore
@@ -1,8 +1,11 @@
-Dockerfile.*
+Dockerfile.adminjs
+Dockerfile.lo-mercat
 docker-compose.yml
+docker-compose-next.yml
 .dockerignore
 node_modules
 npm-debug.log
 README.md
+README-docker.md
 .next
 .git
