--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@adminjs/express": "^5.0.1",
     "@adminjs/prisma": "^3.0.1",
+    "@emotion/react": "^11.10.4",
     "@prisma/client": "4.4.0",
     "adminjs": "^6.4.1",
     "bootstrap": "^5.2.2",
@@ -22,6 +23,7 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
