--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -19,7 +19,8 @@
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
