--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -18,10 +18,10 @@
   "dependencies": {
     "@adminjs/express": "^5.0.1",
     "@adminjs/prisma": "^3.0.1",
-    "@prisma/client": "4.5.0",
-    "adminjs": "^6.4.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@prisma/client": "4.5.0",
+    "adminjs": "^6.4.1",
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
