--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "^4.4.0",
+    "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
