--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -9,7 +9,7 @@
     "seed": "node prisma/seed.js"
   },
   "scripts": {
-    "dev": "prisma generate; next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
