--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -27,14 +27,14 @@
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "next": "12.3.1",
-    "next-auth": "^4.14.0",
+    "next-auth": "^4.16.3",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
-    "tslib": "^2.4.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
