NEXT AUTH key and wrap in ssr provider

--- a/lo-mercat-app/.env
+++ b/lo-mercat-app/.env
@@ -1,2 +1,3 @@
 POSTGRES_PASSWORD = lo-mercat-ps
 DATABASE_URL = postgresql://postgres:lo-mercat-ps@localhost:5432/initdb
+NEXTAUTH_SECRET = b8gTvQdCms3oEqTnkB4U9nNVP5IgUT2zzzLgkLzx6f0=
