--- a/lo-mercat-app/docker-compose-next.yml
+++ b/lo-mercat-app/docker-compose-next.yml
@@ -10,3 +10,4 @@ services:
       - "3000:3000"
     environment:
       DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/initdb
+      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
