--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -20,21 +20,22 @@
     "@adminjs/prisma": "^3.0.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@prisma/client": "4.5.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.5.0",
     "adminjs": "^6.4.1",
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "next": "12.3.1",
-    "next-auth": "^4.14.0",
+    "next-auth": "^4.16.3",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
-    "tslib": "^2.4.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
