--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -13,6 +13,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test:e2e": "playwright test",
     "updatedb": "npx prisma migrate dev --name init"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.27.1",
     "@types/express": "^4.17.14",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
