--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,13 +15,17 @@ jobs:
         node-version: 16
     - name: Install dependencies
       run: npm ci
+      working-directory: ./lo-mercat-app
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      working-directory: ./lo-mercat-app
     - name: Run Playwright tests
       run: npx playwright test
+      working-directory: ./lo-mercat-app
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+      working-directory: ./lo-mercat-app
