--- a/lo-mercat-app/docker-compose.yml
+++ b/lo-mercat-app/docker-compose.yml
@@ -9,11 +9,11 @@ services:
     ports:
       - "3001:3001"
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/initdb
+      DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/initdb
   db:
     image: "postgres:latest"
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     expose:
       - "5432"
     ports:
