--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -28,12 +28,12 @@
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
-    "next": "12.3.1",
+    "next": "^13.0.3",
     "next-auth": "^4.16.3",
     "next-pwa": "^5.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "sass": "^1.55.0",
     "tslib": "^2.4.0"
@@ -45,7 +45,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.3",
     "prisma": "^4.5.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
