--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -23,7 +23,9 @@
     "@emotion/styled": "^11.10.4",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.5.0",
+    "@types/bcrypt": "^5.0.0",
     "adminjs": "^6.4.1",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
