--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "@types/node": "latest",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "@types/ua-parser-js": "^0.7.36",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "prisma": "^4.5.0",
