--- a/lo-mercat-app/tsconfig.json
+++ b/lo-mercat-app/tsconfig.json
@@ -5,7 +5,7 @@
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
       "@common/*": ["src/common/*"],
-      "@types/*": ["src/types/*"]
+      "@customTypes/*": ["src/types/*"]
     },
     "target": "es5",
     "lib": [
