--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -25,13 +25,13 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "@next/font": "latest",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "latest",
     "@prisma/client": "4.5.0",
     "adminjs": "^6.4.1",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
-    "bcrypt": "^5.1.0",
     "express-session": "^1.17.3",
     "next": "latest",
     "next-auth": "^4.16.3",
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/node": "latest",
     "@types/react": "^18.0.25",
