--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -25,9 +25,10 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
-    "@next/font": "latest",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "latest",
     "@prisma/client": "4.5.0",
+    "@reduxjs/toolkit": "^1.9.0",
     "adminjs": "^6.4.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
@@ -36,6 +37,7 @@
     "next-auth": "^4.16.3",
     "next-intl": "^2.9.1",
     "next-pwa": "^5.6.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.38.0",
