protected with cards

--- a/lo-mercat-app/Dockerfile.adminjs
+++ b/lo-mercat-app/Dockerfile.adminjs
@@ -28,7 +28,7 @@ COPY adminjs ./adminjs
 COPY prisma ./prisma
 COPY *.json *.js *.ts *.env *.sh ./
 
-RUN prisma generate
+RUN npx prisma generate
 
 # WORKDIR /app/adminjs
 
