--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -42,6 +42,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.38.0",
+    "sweetalert2": "^11.6.14",
+    "sweetalert2-react-content": "^5.0.7",
     "tslib": "^2.4.0",
     "ua-parser-js": "^1.0.32",
     "universal-cookie": "^4.0.4"
