--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -39,6 +39,7 @@
     "next-intl": "^2.9.1",
     "next-pwa": "^5.6.0",
     "next-redux-wrapper": "^8.0.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.38.0",
