--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -43,6 +43,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.38.0",
+    "react-loader-spinner": "^5.3.4",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7",
     "tslib": "^2.4.0",
