--- a/lo-mercat-app/Dockerfile.adminjs
+++ b/lo-mercat-app/Dockerfile.adminjs
@@ -1,7 +1,7 @@
 # Install dependencies only when needed
-FROM node:18-alpine AS deps
+FROM node:18-slim AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+#RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 
@@ -15,7 +15,7 @@ RUN \
   fi
 
 
-FROM node:18-alpine AS runner
+FROM node:18-slim AS runner
 
 RUN npm i -g prisma@4.5.0
 
