--- a/lo-mercat-app/.env
+++ b/lo-mercat-app/.env
@@ -1,3 +1,5 @@
 POSTGRES_PASSWORD = lo-mercat-ps
 DATABASE_URL = postgresql://postgres:lo-mercat-ps@localhost:5432/initdb
 NEXTAUTH_SECRET = b8gTvQdCms3oEqTnkB4U9nNVP5IgUT2zzzLgkLzx6f0=
+NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY = BHyjh6bYOINmLGbTXN3E3zmbIZDu25IdpbahG-lQO1WN6pi5K9x9FuzWd8fCTJUUom9-YHx9gVQqpXViKzL3MfI
+WEB_PUSH_PRIVATE_KEY= W39XGpz_3HZBjeAOFC4NV-ZAt5DKESPCeik2qw4VIa0
