--- a/lo-mercat-app/Dockerfile.lo-mercat
+++ b/lo-mercat-app/Dockerfile.lo-mercat
@@ -1,7 +1,5 @@
 # Install dependencies only when needed
-FROM node:18-alpine AS deps
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+FROM node:18-slim AS deps
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
@@ -20,7 +18,7 @@ COPY prisma prisma
 RUN prisma generate
 
 # Rebuild the source code only when needed
-FROM node:18-alpine AS builder
+FROM node:18-slim AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
@@ -36,7 +34,7 @@ COPY . .
 RUN npm run build
 
 # Production image, copy all the files and run next
-FROM node:18-alpine AS runner
+FROM node:18-slim AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
