--- a/lo-mercat-app/package.json
+++ b/lo-mercat-app/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@faker-js/faker": "^7.6.0",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -31,6 +32,7 @@
     "@reduxjs/toolkit": "^1.9.0",
     "adminjs": "^6.4.1",
     "bcrypt": "^5.1.0",
+    "chart.js": "^4.1.1",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
@@ -41,6 +43,7 @@
     "next-redux-wrapper": "^8.0.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "latest",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "latest",
     "react-hook-form": "^7.38.0",
     "react-loader-spinner": "^5.3.4",
